Added: NuGet packages

--- a/NGSL.lib/NGSL.lib.csproj
+++ b/NGSL.lib/NGSL.lib.csproj
@@ -5,4 +5,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Lextm.SharpSnmpLib" Version="12.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
