--- a/NGSL.lib/NGSL.lib.csproj
+++ b/NGSL.lib/NGSL.lib.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Lextm.SharpSnmpLib" Version="12.3.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0-preview.6.21352.12" />
   </ItemGroup>
 
 </Project>
